.provarCaches/00D5f000005vwGkEAI/objects/rstk__customext__c.object
<CustomObject>
    <fields>
        <fullName>rstk__iccomcod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Inventory Commodity Code</label>
        <referenceTo>rstk__iccomcod__c</referenceTo>
        <relationshipLabel>Custom Extensions</relationshipLabel>
        <relationshipName>Custom_Extensions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__include_serial__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, Serial Items will be included in generated list.</inlineHelpText>
        <label>Include Serial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__isCreditChng__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Credit Limit Change</description>
        <inlineHelpText>Credit Limit Change</inlineHelpText>
        <label>Credit Limit Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__labbooking_allowqtybooking__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, only qualifying operations with Qty Available &gt; 0 will be loaded.</inlineHelpText>
        <label>Show Only Operations with Qty Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__labbooking_icitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter Inventory Item number here in order to filter records returned upon loading the entry grid.  When set, only qualifying WO Operations for the Inventory Item will be returned.</inlineHelpText>
        <label>Work Orders for Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Custom Extensions (Item)</relationshipLabel>
        <relationshipName>Custom_Extensions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__labbooking_proj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter Project number here in order to filter records returned upon loading the entry grid.  When set, only qualifying WO Operations for the given Project will be returned.</inlineHelpText>
        <label>Work Orders for Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>Custom Extensions (Project)</relationshipLabel>
        <relationshipName>Custom_Extensions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__labbooking_selectedwos__c</fullName>
        <inlineHelpText>Select Work Order to be transferred using &apos;Search Work Order&apos;. Once done, Work Order number will appear in this box. Multiple Work Orders may be selected by entering Work Order number, selecting it, see it appear in this box, then enter the next Work Order number, select it, moving it to this box, &amp; so on.</inlineHelpText>
        <label>Selected Work Orders</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__labbooking_selectedwoslist__c</fullName>
        <label>labbooking_selectedwoslist</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__labbooking_wocst__c</fullName>
        <inlineHelpText>Enter the desired Work Order number, then select from the resulting list, which will place the Work Order in the box below.</inlineHelpText>
        <label>LabBook-Work Order</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__mkpmgn_cost__c</fullName>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__mkpmgn_dolperacre__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>mkpmgn_dolperacre</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__mkpmgn_gpamt__c</fullName>
        <inlineHelpText>TBD</inlineHelpText>
        <label>GP Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__mkpmgn_jcacre__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>$/Acre</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__mkpmgn_jctot__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Mtl, Tax, Lab</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__mkpmgn_jobgp__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Comb GP%</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__mkpmgn_labgp__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Lab GP%</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__mkpmgn_mtlgp__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Mtl GP%</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__mkpmgn_prod__c</fullName>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Product</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__mkpmgn_proddesc__c</fullName>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Bid Item Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__mkpmgn_taskcode__c</fullName>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Task Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__mkpmgn_tcost__c</fullName>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Total Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__mkpmgn_tgpamt__c</fullName>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Total GP $</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__mkpmgn_totwtax__c</fullName>
        <inlineHelpText>TBD</inlineHelpText>
        <label>mkpmgn_totwtax</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__paytype__c</fullName>
        <label>Pay Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>EFT</fullName>
                </value>
                <value>
                    <fullName>Bank Card</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__poap_fromline__c</fullName>
        <inlineHelpText>Filter Purchase Order Receipts having PO Line - Line Number greater than specified value. Blank is treated as 1.</inlineHelpText>
        <label>From Line</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poap_toline__c</fullName>
        <inlineHelpText>Filter Purchase Order Receipts having PO Line - Line Number less than specified value. Blank is treated as 999.</inlineHelpText>
        <label>To Line</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poauth_txndate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poauth_txnref__c</fullName>
        <inlineHelpText>User-defined reference, up to 50 characters in length.</inlineHelpText>
        <label>Transaction Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pohdr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Purchase Order Header</description>
        <inlineHelpText>Purchase Order used to filter result set below</inlineHelpText>
        <label>Purchase Order Header</label>
        <referenceTo>rstk__pohdr__c</referenceTo>
        <relationshipLabel>Custom Extensions</relationshipLabel>
        <relationshipName>custextpohdrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poline_selected__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>TBD</inlineHelpText>
        <label>PO Line Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__popurge_cutoffdate__c</fullName>
        <label>Cutoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__popurge_sycmp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>rstk__sycmp__c</referenceTo>
        <relationshipLabel>Custom Extensions (Company)</relationshipLabel>
        <relationshipName>sycmp01</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__popurge_sydiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Division is set to the Current Division set on your Mfg User and cannot be changed directly. To create / access a record in another Division or Company, use Quick Menu option to “Change Company/Division” or update the Current Div on your Mfg User record.</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Custom Extensions (Division)</relationshipLabel>
        <relationshipName>sydiv01</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poqty__c</fullName>
        <label>Receipt&lt;br/&gt;Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__porcptap__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>TBD</inlineHelpText>
        <label>PO Receipt Transaction</label>
        <referenceTo>rstk__porcptap__c</referenceTo>
        <relationshipLabel>Custom Extensions</relationshipLabel>
        <relationshipName>customexts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pounitpricemcurr__c</fullName>
        <label>Receipt&lt;br/&gt;Unit Price</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__povend__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Vendor Master</label>
        <referenceTo>rstk__povend__c</referenceTo>
        <relationshipLabel>Custom Extensions</relationshipLabel>
        <relationshipName>Custom_Extensions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__priorityShipment__c</fullName>
        <label>Priority Shipment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Priority Only</fullName>
                </value>
                <value>
                    <fullName>Non-Priority Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__purchord_overriderate__c</fullName>
        <inlineHelpText>Override Rate</inlineHelpText>
        <label>Override Rate</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__qty__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__quickcreatesorma_indlinesforkitcomps__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, system creates one RMA record for each kit component.</inlineHelpText>
        <label>Individual Lines for Kit Components</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__quickcreatesorma_useproddefaults__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, the Product (or Product Group) defaults are used for the RMA Inventory settings. When unchecked, the originating SO is used.</inlineHelpText>
        <label>Use Product Defaults for Inventory Locs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__reconcileautogen_lastautoccdate__c</fullName>
        <description>reconcileautogen_lastautoccdate__c</description>
        <inlineHelpText>Represents the last Date that Cycle Count report was run.</inlineHelpText>
        <label>Date of the Last Auto Cycle Count Run</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__reconcileautogen_number_a__c</fullName>
        <description>reconcileautogen_number_a</description>
        <inlineHelpText>Enter the number of A items you wish to be counted in the next cycle count.</inlineHelpText>
        <label>Number of A Items to be Counted</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__reconcileautogen_number_b__c</fullName>
        <description>reconcileautogen_number_b</description>
        <inlineHelpText>Enter the number of B items you wish to be counted in the next cycle count.</inlineHelpText>
        <label>Number of B Items to be Counted</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__reconcileautogen_number_c__c</fullName>
        <description>reconcileautogen_number_c</description>
        <inlineHelpText>Enter the number of C items you wish to be counted in the next cycle count.</inlineHelpText>
        <label>Number of C Items to be Counted</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__recordtype__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>recordtype</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__replenishmentprocessmode__c</fullName>
        <inlineHelpText>The DRP Engine can be run in one of two modes – Full Regeneration mode or Net Change mode.  Full Regen processes all Replenishment records where as Net Change will only process records that have had a change of some kind since the last DRP Processing run.</inlineHelpText>
        <label>DRP Processing Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Net Change</fullName>
                </value>
                <value>
                    <fullName>Full Regeneration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__rma_soinvline__c</fullName>
        <label>SO Invoice Line</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__rmarcpt_allowinvloccreation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, allows for the creation of a new Inventory Location upon RMA Receipt</inlineHelpText>
        <label>Allow inventory location creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__rmarcpt_destination__c</fullName>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Destination</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inventory</fullName>
                </value>
                <value>
                    <fullName>Inspection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__rmarcpt_loccomments__c</fullName>
        <inlineHelpText>User-defined Location Comments (up to 100 characters in length) written to the Inventory Location record created or updated when performing the RMA Receipt</inlineHelpText>
        <label>Location Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__rmarcpt_locid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Location ID into which this RMA Receipt will be received</inlineHelpText>
        <label>Location ID</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>Custom Extensions (Location ID)</relationshipLabel>
        <relationshipName>customexts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__rmarcpt_locnum__c</fullName>
        <inlineHelpText>The Location Number into which this RMA Receipt will be received</inlineHelpText>
        <label>Location Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__rmarcpt_lotno__c</fullName>
        <inlineHelpText>When Item is Lot Controlled, this is the Lot Number that will be used in the RMA Receipt</inlineHelpText>
        <label>Lot No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__rmarcpt_qty__c</fullName>
        <inlineHelpText>The quantity to be received</inlineHelpText>
        <label>Qty to Process</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__rmarcpt_qtypending__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Qty Pending</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__rmarcpt_reverse__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, reverses the RMA Receipt.  A Receipt Reversal can be done when either &apos;Qty in Inventory&apos; or &apos;Qty in Inspection&apos; &gt; 0.</inlineHelpText>
        <label>Reverse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__rmarcpt_toinspection__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, RMA Receipt will be made to the Inspection Location identified on the RMA Detail for the RMA being received</inlineHelpText>
        <label>To Inspection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__rmarcpt_toinventory__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, RMA Receipt will be made to the InventoryLocation identified on the RMA Detail for the RMA being received</inlineHelpText>
        <label>To Inventory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__rmarcpt_transferfrominsp__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Field is enabled when &apos;Qty in Inspection&apos; &gt; 0, allowing it to be &quot;Transferred To&quot; Inventory or Scrap</inlineHelpText>
        <label>Inspection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__rmarcpt_transferfrominv__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Field is enabled when &apos;Qty in Inventory&apos; &gt; 0, allowing it to be &quot;Transferred To&quot; Inspection.  Also can set &apos;Reverse&apos; field to reverse the Receipt.</inlineHelpText>
        <label>Inventory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__rmarcpt_transferfromlocid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When a &apos;Transfer From&apos; field is checked, this is the Location ID that the item will be transferred from</inlineHelpText>
        <label>Stock Loc ID Master</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>Custom Extensions</relationshipLabel>
        <relationshipName>Custom_Extensions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__rmarcpt_transferfromlocnum__c</fullName>
        <inlineHelpText>When a &apos;Transfer From&apos; field is checked, this is the Location Number that the item will be transferred from</inlineHelpText>
        <label>rmarcpt_transferfromlocnum</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__rmarcpt_transferfromscrap__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Field is enabled when &apos;Qty Scrapped&apos; &gt; 0, allowing it to be transferred to Inspection</inlineHelpText>
        <label>Scrap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__rmarcpt_transferqty__c</fullName>
        <inlineHelpText>Quantity to be transferred or reversed.</inlineHelpText>
        <label>Transfer Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__rmarcpt_transfertoinsp__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Field is enabled when &apos;Qty in Inventory&apos; &gt; 0 or &apos;Qty Scrapped&apos; &gt; 0, allowing it to be &quot;Transferred To&quot; the Inventory Location for Inspection</inlineHelpText>
        <label>Inspection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__rmarcpt_transfertoinv__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Field is enabled when &apos;Qty in Inspection&apos; &gt; 0, allowing it to be &quot;Transferred To&quot; Inventory</inlineHelpText>
        <label>Inventory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__rmarcpt_transfertolocid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When a &apos;Transfer To&apos; field is checked, this is the Location ID that the item will be transferred to</inlineHelpText>
        <label>Stock Loc ID Master</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>Custom Extensions (Stock Loc ID Master)</relationshipLabel>
        <relationshipName>Custom_Extensions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__rmarcpt_transfertolocnum__c</fullName>
        <inlineHelpText>When a &apos;Transfer To&apos; field is checked, this is the Location Number that the item will be transferred to</inlineHelpText>
        <label>rmarcpt_transfertolocnum</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__rmarcpt_transfertoscrap__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Field is enabled when &apos;Qty in Inspection&apos; &gt; 0, allowing it to be transferred to Scrap</inlineHelpText>
        <label>Scrap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__rmarcpt_txncomments__c</fullName>
        <inlineHelpText>User defined alpha-numeric comment up to 100 characters in length</inlineHelpText>
        <label>Txn Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__schcronexpn__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>schcronexpn</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__schending__c</fullName>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Ending</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__schstarting__c</fullName>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Starting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__schstarttime__c</fullName>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Preferred Start Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 AM</fullName>
                    <default>true</default>
                    <label>12:00 AM</label>
                </value>
                <value>
                    <fullName>1:00 AM</fullName>
                </value>
                <value>
                    <fullName>2:00 AM</fullName>
                </value>
                <value>
                    <fullName>3:00 AM</fullName>
                </value>
                <value>
                    <fullName>4:00 AM</fullName>
                </value>
                <value>
                    <fullName>5:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>3:00 PM</fullName>
                </value>
                <value>
                    <fullName>4:00 PM</fullName>
                </value>
                <value>
                    <fullName>5:00 PM</fullName>
                </value>
                <value>
                    <fullName>6:00 PM</fullName>
                </value>
                <value>
                    <fullName>7:00 PM</fullName>
                </value>
                <value>
                    <fullName>8:00 PM</fullName>
                </value>
                <value>
                    <fullName>9:00 PM</fullName>
                </value>
                <value>
                    <fullName>10:00 PM</fullName>
                </value>
                <value>
                    <fullName>11:00 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__selection_date__c</fullName>
        <description>ha</description>
        <inlineHelpText>Used to iID items that haven&apos;t been counted since this &quot;cutoff&quot;. For example, if an item was counted on 6/8 &amp; the &apos;Selection Date = 6/1, the given item will NOT be included. If that last date counted was 6/8 &amp; the &apos;Selection Date&apos; is 6/10, it will be.</inlineHelpText>
        <label>Selection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__shipmentComments__c</fullName>
        <label>Shipment Comments</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Site Master</inlineHelpText>
        <label>Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>Custom Extensions</relationshipLabel>
        <relationshipName>Custom_Extensions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__so_exchrate_schedule__c</fullName>
        <description>so_exchrate_schedule__c</description>
        <label>Type of Exchange Rate Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Locked-In Commitment Rate</fullName>
                </value>
                <value>
                    <fullName>Override Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__so_override_exchrate__c</fullName>
        <description>so_override_exchrate__c</description>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__so_override_schedule__c</fullName>
        <description>so_override_schedule__c</description>
        <label>Rate Schedule</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soamortprocessForMonth__c</fullName>
        <inlineHelpText>Here, enter a single or two digit number value for the Amortization processing month.</inlineHelpText>
        <label>Process For Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soamortprocessForYear__c</fullName>
        <inlineHelpText>Here, enter a 4 digit number value for the Amortization processing year.</inlineHelpText>
        <label>Process For Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sohdr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Sales Order Header</label>
        <referenceTo>rstk__sohdr__c</referenceTo>
        <relationshipLabel>Custom Extensions</relationshipLabel>
        <relationshipName>customexts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soinv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Sales Order Invoice Header</label>
        <referenceTo>rstk__soinv__c</referenceTo>
        <relationshipLabel>Custom Extensions</relationshipLabel>
        <relationshipName>customexts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soinv_exchrate_schedule__c</fullName>
        <description>soinv_exchrate_schedule__c</description>
        <label>Type of Exchange Rate Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Locked-In Commitment Rate</fullName>
                </value>
                <value>
                    <fullName>Override Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__soinv_override_exchrate__c</fullName>
        <description>soinv_override_exchrate__c</description>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soinv_override_schedule__c</fullName>
        <description>soinv_override_schedule__c</description>
        <label>Rate Schedule</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Sales Order Line</label>
        <referenceTo>rstk__soline__c</referenceTo>
        <relationshipLabel>Custom Extensions</relationshipLabel>
        <relationshipName>customexts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soprod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order Customer Product</label>
        <referenceTo>rstk__sopc__c</referenceTo>
        <relationshipLabel>Custom Extensions</relationshipLabel>
        <relationshipName>Custom_Extensions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sopurge_cutoffdate__c</fullName>
        <label>Cutoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__sopurge_purgeopt__c</fullName>
        <label>Purge Option</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sopurge_sydiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Division is set to the Current Division set on your Mfg User and cannot be changed directly. To create / access a record in another Division or Company, use Quick Menu option to “Change Company/Division” or update the Current Div on your Mfg User record.</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Custom Extensions (Division)</relationshipLabel>
        <relationshipName>sydiv02</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>